--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -75,63 +76,98 @@
           </div>
         </div>
         <div id="information">
-          <div class ="picture">
-            <img src="../../images/artistas/artist1-avatar.jpg">
+          <div class="picture">
+            <img src="../../images/artistas/artist1-avatar.jpg" />
           </div>
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>   
-            <div class ="iframe">
-              <img src="../../images/artistas/artist1-banner.jpg" id="picture-article" />
+              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y
+              Taki, activo desde 2013, que en el último año ha renacido con la
+              trilogía GIRL POWER, tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y
+              NEW AGE— que han revolucionado la escena pop japonesa y que
+              incluyen colaboraciones en su producción de artistas de la talla
+              de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se
+              convirtió en el primer gran hit de FAKY consiguiendo la tercera
+              posición en iTunes junto a Ariana Grande y Radiohead.
+            </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist1-banner.jpg"
+                id="picture-article"
+              />
             </div>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              Además, ese mismo año la canción ganó el premio “Mejor vídeo de
+              nuevos artistas japoneses” en los MTV Video Music Awards de Japón.
+              En 2017, la canción Surrender se coló entre el Top 50 de canciones
+              virales de Spotify. Sin olvidarnos de las canciones four, el
+              cuarto ending del anime Black Clover y Chase Me, de Gundam Build
+              Fighters.
             </p>
-         
-            <div class = "iframe">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Um0Yk3ahDCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </div>
+
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/Um0Yk3ahDCA"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
             <p>
-              ¡No os perdáis a Shirogane-sama por primera vez en la capital en la próxima edición de Manguca! Será jurado de los concursos, participará en el Q&A y además tendrá un stand donde podréis conocerla y comprar su merchandising. ¡Os esperamos!
+              ¡No os perdáis a Shirogane-sama por primera vez en la capital en
+              la próxima edición de Manguca! Será jurado de los concursos,
+              participará en el Q&A y además tendrá un stand donde podréis
+              conocerla y comprar su merchandising. ¡Os esperamos!
             </p>
-            
           </article>
         </div>
-
-    </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
