--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,51 +73,95 @@
         <div class="titleBox">
           <div id="title">
             <span>Ginny Di</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist7-avatar.jpg" />
+          </div>
           <article>
             <p>
-              Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo repertorio incluye cosplays profesionales, sketches de comedia y videos de música. Empezó su carrera en el sector de las páginas web en 2011, uniéndose más tarde al grupo Not Literally Productions en YouTube, donde se hizo conocida por crear parodias musicales de pop muy pegadizas sobre Harry Potter, Juego de Tronos, Doctor Who…
+              Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
+              repertorio incluye cosplays profesionales, sketches de comedia y
+              videos de música. Empezó su carrera en el sector de las páginas
+              web en 2011, uniéndose más tarde al grupo Not Literally
+              Productions en YouTube, donde se hizo conocida por crear parodias
+              musicales de pop muy pegadizas sobre Harry Potter, Juego de
+              Tronos, Doctor Who…
             </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist7-banner.jpg"
+                id="picture-article"
+              />
+            </div>
             <p>
-              En 2014 decidió triunfar en solitario, y se empezó a hacer muy popular debido a sus cosplays de Arya de Juego de Tronos y de Jester de Critical Role. Sus cosplays inspirados en mujeres vintage se hicieron virales rápidamente, al igual que su traje de centauro completamente articulado de la película Fantasía de Disney. Ginny dirige ahora su propio negocio creando disfraces realmente detallados y escribiendo, produciendo y protagonizando videos musicales y sketches sobre fandoms y juegos de mesa.
+              En 2014 decidió triunfar en solitario, y se empezó a hacer muy
+              popular debido a sus cosplays de Arya de Juego de Tronos y de
+              Jester de Critical Role. Sus cosplays inspirados en mujeres
+              vintage se hicieron virales rápidamente, al igual que su traje de
+              centauro completamente articulado de la película Fantasía de
+              Disney. Ginny dirige ahora su propio negocio creando disfraces
+              realmente detallados y escribiendo, produciendo y protagonizando
+              videos musicales y sketches sobre fandoms y juegos de mesa.
             </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/QOawH-IZI0U"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
