--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,15 +73,40 @@
         <div class="titleBox">
           <div id="title">
             <span>H Alexander</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist8-avatar.jpg" />
+          </div>
           <article>
             <p>
-              Hannah Alexander trabaja como artista a tiempo completo en Hampshire, UK. Se especializa en arte digital y diseño de vestuario, así como en retratos de acuarela. Su estilo es una combinación de la simplicidad moderna y el Art Nouveau retro. Es más conocida por sus diseños basados en personajes de la cultura pop, además sacó un libro con todo tipo de detalles para que fuese más fácil hacer cosplay de éstos.            </p>
-            <p>
-              No solo se dedica a la ilustración y al diseño, Hannah Alexander es cosplayer ocasional. Ha estudiado confección y diseño por lo que su nivel de costura es muy alto, fijándose sobretodo en los detalles de los trajes. 
+              Hannah Alexander trabaja como artista a tiempo completo en
+              Hampshire, UK. Se especializa en arte digital y diseño de
+              vestuario, así como en retratos de acuarela. Su estilo es una
+              combinación de la simplicidad moderna y el Art Nouveau retro. Es
+              más conocida por sus diseños basados en personajes de la cultura
+              pop, además sacó un libro con todo tipo de detalles para que fuese
+              más fácil hacer cosplay de éstos.
             </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist8-banner.jpg"
+                id="picture-article"
+              />
+            </div>
+            <p>
+              No solo se dedica a la ilustración y al diseño, Hannah Alexander
+              es cosplayer ocasional. Ha estudiado confección y diseño por lo
+              que su nivel de costura es muy alto, fijándose sobretodo en los
+              detalles de los trajes.
+            </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist8-banner2.jpg"
+                id="picture-article"
+              />
+            </div>
           </article>
         </div>
       </div>
@@ -88,34 +114,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
