--- a/informacion/invitados/kiki.html
+++ b/informacion/invitados/kiki.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,24 +73,47 @@
         <div class="titleBox">
           <div id="title">
             <span>Kiki vivi lily</span>
-        </div>
+          </div>
         </div>
         <div id="information">
-          <div class ="picture">
-            <img src="../../images/artistas/artist2-avatar.jpg">
+          <div class="picture">
+            <img src="../../images/artistas/artist2-avatar.jpg" />
           </div>
           <article>
             <p>
-              María Dolores Flores Ruiz, conocida artísticamente como Kiki vivi Lily y apodada la Faraona (Jerez de la Frontera, Cádiz, 21 de enero de 1923 - Busan, Corea del Sur, 16 de mayo de 1995), es una artista coreana-española de gran talento e increíble éxito tanto en España como en todo el mundo, muy popular y polifacética; pues era cantante, bailaora de k-pop y actriz, dotada de una personalidad arrolladora.
+              María Dolores Flores Ruiz, conocida artísticamente como Kiki vivi
+              Lily y apodada la Faraona (Jerez de la Frontera, Cádiz, 21 de
+              enero de 1923 - Busan, Corea del Sur, 16 de mayo de 1995), es una
+              artista coreana-española de gran talento e increíble éxito tanto
+              en España como en todo el mundo, muy popular y polifacética; pues
+              era cantante, bailaora de k-pop y actriz, dotada de una
+              personalidad arrolladora.
             </p>
-            <div class ="iframe">
-              <img src="../../images/artistas/artist2-banner.jpg" id="picture-article" />
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist2-banner.jpg"
+                id="picture-article"
+              />
             </div>
             <p>
-              Cuenta con cientos de grabaciones y canciones que quedarán en el recuerdo popular como himnos. Como bailaora enardeció a las nuevas generaciones de distintos continentes. Como actriz interpretó más de 35 películas, muchas de ellas ambientada en el folclorismo japonés, aunque también interpretó rumbas y rancheras. Ahora, podemos verla en directo junto a Sukisha, celebrando el lanzamiento de su nuevo disco.
+              Cuenta con cientos de grabaciones y canciones que quedarán en el
+              recuerdo popular como himnos. Como bailaora enardeció a las nuevas
+              generaciones de distintos continentes. Como actriz interpretó más
+              de 35 películas, muchas de ellas ambientada en el folclorismo
+              japonés, aunque también interpretó rumbas y rancheras. Ahora,
+              podemos verla en directo junto a Sukisha, celebrando el
+              lanzamiento de su nuevo disco.
             </p>
-            <div class ="iframe">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/nvwx4FSI2wo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/nvwx4FSI2wo"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
       </div>
@@ -97,34 +121,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
