--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,19 +73,57 @@
         <div class="titleBox">
           <div id="title">
             <span>Laia López</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist6-avatar" />
+          </div>
           <article>
             <p>
-              Laia López, graduada en Bellas Artes en la Universidad de Barcelona, es una autodidacta en el campo de la ilustración digital y en el desarrollo de su propio estilo de dibujo. Empezó a dedicarse de manera profesional al arte a los 16 años y desde entonces ha seguido su camino por la rama de la ilustración digital y tradicional, especializándose en el diseño de personajes, desarrollo visual y el cómic/novela ilustrada. Comparte la mayoría de sus ilustraciones por redes sociales, donde alcanza más de un millón de seguidores.
+              Laia López, graduada en Bellas Artes en la Universidad de
+              Barcelona, es una autodidacta en el campo de la ilustración
+              digital y en el desarrollo de su propio estilo de dibujo. Empezó a
+              dedicarse de manera profesional al arte a los 16 años y desde
+              entonces ha seguido su camino por la rama de la ilustración
+              digital y tradicional, especializándose en el diseño de
+              personajes, desarrollo visual y el cómic/novela ilustrada.
+              Comparte la mayoría de sus ilustraciones por redes sociales, donde
+              alcanza más de un millón de seguidores.
+            </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist6-banner.jpg"
+                id="picture-article"
+              />
+            </div>
+            <p>
+              Hace unos pocos meses, publicó su último trabajo: “Strawberry
+              Moon” su primera obra en solitario, una novela gráfica juvenil en
+              dos tomos sobre sirenas. Actualmente trabaja en ilustración
+              editorial, ilustrando libros infantiles y juveniles para diversas
+              editoriales españolas, como Planeta, Penguin Random House, Norma
+              Editorial, La Galera… ¿Os suenan Mystical? ¿Sara y las goleadoras?
+              ¿La diversión de Martina? ¡Los ha ilustrado ella! También tiene un
+              artbook con una recopilación de sus mejores obras hasta el momento
+              llamado “Gleaming” En su tiempo libre también hace fan art de las
+              cosas que le apasionan, sobretodo de K-pop, anime y Disney.
             </p>
             <p>
-              Hace unos pocos meses, publicó su último trabajo: “Strawberry Moon” su primera obra en solitario, una novela gráfica juvenil en dos tomos sobre sirenas. Actualmente trabaja en ilustración editorial, ilustrando libros infantiles y juveniles para diversas editoriales españolas, como Planeta, Penguin Random House, Norma Editorial, La Galera… ¿Os suenan Mystical? ¿Sara y las goleadoras? ¿La diversión de Martina? ¡Los ha ilustrado ella! También tiene un artbook con una recopilación de sus mejores obras hasta el momento llamado “Gleaming” En su tiempo libre también hace fan art de las cosas que le apasionan, sobretodo de K-pop, anime y Disney.
+              ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá un
+              stand donde podréis conocerla y comprar su merchandising y además
+              dará una charla. ¡Os esperamos!
             </p>
-            <p>
-              ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá un stand donde podréis conocerla y comprar su merchandising y además dará una charla. ¡Os esperamos!
-            </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/0zPVvGoMKdI"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
       </div>
@@ -92,34 +131,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
