--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,48 +73,88 @@
         <div class="titleBox">
           <div id="title">
             <span>Jenna Lynn</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist9-avatar.jpg" />
+          </div>
           <article>
             <p>
-              Cosplayer y estrella de Instagram que es conocida por publicar una variedad de retratos y fotos de modelaje en diferentes atuendos para sus más de 1.3 millones de seguidores. Se le puede ver en una variedad de atuendos incluyendo a Spiderman y Kusanagi de Ghost in the Shell.
+              Cosplayer y estrella de Instagram que es conocida por publicar una
+              variedad de retratos y fotos de modelaje en diferentes atuendos
+              para sus más de 1.3 millones de seguidores. Sus destacados son
+              Spiderman y Kusanagi de Ghost in the Shell.
             </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist9-banner.jpg"
+                id="picture-article"
+              />
+            </div>
+            <p>
+              Además de dedicarse a ser creadora de contenido, lleva una tienda
+              online de su propia marca de ropa y es partner de la famosa web de
+              streaming Twitch, donde conversa con sus fans y juega a
+              videojuegos en directo.
+            </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/U8rwdCg8aIc"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
