--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,16 +73,45 @@
         <div class="titleBox">
           <div id="title">
             <span>Sukisha</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist5-avatar.png" />
+          </div>
           <article>
             <p>
-              Se trata del productor y cantante japonés SUKISHA, siendo la primera estrella invitada de Manguca. Por primera vez fuera de Japón se podrá disfrutar de los temas y la música de este maestro del lo-fi hip hop, el género musical que más de moda está en internet.
+              Se trata del productor y cantante japonés SUKISHA, siendo la
+              primera estrella invitada de Manguca. Por primera vez fuera de
+              Japón se podrá disfrutar de los temas y la música de este maestro
+              del lo-fi hip hop, el género musical que más de moda está en
+              internet.
             </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist5-banner.jpg"
+                id="picture-article"
+              />
+            </div>
             <p>
-              La obra de este artista japonés destaca por sus composiciones de estilo lo-fi hip hop, un enfoque estético de la música en donde predomina el uso de medios de grabación de baja fidelidad. Conocido también como Hiroyuki Ikezawa, es un productor que lo pone de relieve no solo con este tipo de música. Tras este artista encontramos temas de corte más pop como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and half minutes magic.
+              La obra de este artista japonés destaca por sus composiciones de
+              estilo lo-fi hip hop, un enfoque estético de la música en donde
+              predomina el uso de medios de grabación de baja fidelidad.
+              Conocido también como Hiroyuki Ikezawa, es un productor que lo
+              pone de relieve no solo con este tipo de música. Tras este artista
+              encontramos temas de corte más pop como Blue in Green, Buddha’s
+              Palm, Pink Jewelry Dream o 4 and half minutes magic.
             </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/KvmmnAmHKVA"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
       </div>
@@ -89,34 +119,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
