--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,14 +73,44 @@
         <div class="titleBox">
           <div id="title">
             <span>Odashima</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist3-avatar.jpg" />
+          </div>
           <article>
             <p>
-              Hitomi Odashima es la directora de animación y asistente de diseño de personajes de My Hero Academia, una de las series de anime más populares del momento. Su trabajo es reconocido en todo el mundo por millones de personas, podremos conocerla en persona durante la próxima edición Manguca.            </p>
+              Hitomi Odashima es la directora de animación y asistente de diseño
+              de personajes de My Hero Academia, una de las series de anime más
+              populares del momento. Su trabajo es reconocido en todo el mundo
+              por millones de personas, podremos conocerla en persona durante la
+              próxima edición Manguca.
+            </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist3-banner.jpg"
+                id="picture-article"
+              />
+            </div>
             <p>
-              Odashima también es conocida por su trabajo en el anime de Blue Exorcist, donde dirigió uno de los capítulos. Además, ha dejado su firma en series como Jewelpet Happiness y la OVA de Black Rock Shooter, entre otros proyectos. Uno de los más destacados es Digimon Adventure tri, en la que trabajó en el diseño de vestuario.            </p>
+              Odashima también es conocida por su trabajo en el anime de Blue
+              Exorcist, donde dirigió uno de los capítulos. Además, ha dejado su
+              firma en series como Jewelpet Happiness y la OVA de Black Rock
+              Shooter, entre otros proyectos. Uno de los más destacados es
+              Digimon Adventure tri, en la que trabajó en el diseño de
+              vestuario.
+            </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/P2DEipI1obI"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
       </div>
@@ -87,34 +118,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
