--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -58,7 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -72,32 +73,54 @@
         <div class="titleBox">
           <div id="title">
             <span>Shirogane</span>
-        </div>
+          </div>
         </div>
         <div id="information">
-          <div class ="picture">
-            <img src="../../images/artistas/artist4-avatar.jpg">
+          <div class="picture">
+            <img src="../../images/artistas/artist4-avatar.jpg" />
           </div>
           <article>
             <p>
-              Shirogane-sama es una cosplayer, estilista de pelucas y MUA de Moscú que lleva haciendo cosplay poco más de 7 años. En 2017 empezó a tener su propia tienda, Holish Cosplay, 
-              donde trabaja actualmente estilizando pelucas para cosplayers. Shirogane-sama empezó su negocio con su talentoso fotógrafo, Ovsyan, aunque en la actualidad dispone de un equipo más grande de creadores del cual está muy orgullosa.
+              Shirogane-sama es una cosplayer, estilista de pelucas y MUA de
+              Moscú que lleva haciendo cosplay poco más de 7 años. En 2017
+              empezó a tener su propia tienda, Holish Cosplay, donde trabaja
+              actualmente estilizando pelucas para cosplayers. Shirogane-sama
+              empezó su negocio con su talentoso fotógrafo, Ovsyan, aunque en la
+              actualidad dispone de un equipo más grande de creadores del cual
+              está muy orgullosa.
             </p>
-            <div class ="iframe">
-              <img src="../../images/artistas/artist4-banner.jpg" id="picture-article" />
-
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist4-banner.jpg"
+                id="picture-article"
+              />
             </div>
             <p>
-              La mayor parte de su creatividad se refleja en sus sesiones de fotos y en sus videos de cosplay, solo en 2019 ha tenido más de 60 y varios videos, trabajando muy duro en ellos. Igualmente su pasión por las artes visuales no la han alejado de los concursos, donde suele actuar y lucir los trajes que ella confecciona. 
-              También suele juzgar en eventos de Rusia y últimamente de todo el mundo, ya que su popularidad la ha llevado a ser invitada de diversos eventos internacionales.
+              La mayor parte de su creatividad se refleja en sus sesiones de
+              fotos y en sus videos de cosplay, solo en 2019 ha tenido más de 60
+              y varios videos, trabajando muy duro en ellos. Igualmente su
+              pasión por las artes visuales no la han alejado de los concursos,
+              donde suele actuar y lucir los trajes que ella confecciona.
+              También suele juzgar en eventos de Rusia y últimamente de todo el
+              mundo, ya que su popularidad la ha llevado a ser invitada de
+              diversos eventos internacionales.
             </p>
-            <div class = "iframe">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bk98SfjtAA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bk98SfjtAA4"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
             <p>
-              ¡No os perdáis a Shirogane-sama por primera vez en la capital en la próxima edición de Manguca! Será jurado de los concursos, participará en el Q&A y además tendrá un stand donde podréis conocerla y comprar su merchandising. ¡Os esperamos!
+              ¡No os perdáis a Shirogane-sama por primera vez en la capital en
+              la próxima edición de Manguca! Será jurado de los concursos,
+              participará en el Q&A y además tendrá un stand donde podréis
+              conocerla y comprar su merchandising. ¡Os esperamos!
             </p>
-            
           </article>
         </div>
       </div>
@@ -105,34 +128,46 @@
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
